fixing table overflow
Former-commit-id: 67f1ef2d1574c1404f62078e98bfc81c442a82d3

--- a/apps/dash-salesforce-crm/assets/s1.css
+++ b/apps/dash-salesforce-crm/assets/s1.css
@@ -121,6 +121,10 @@ table {
   font-family: Ubuntu;
 }
 
+.table {
+  overflow: scroll;
+}
+
 @media (min-width: 960px) {
   #lead_grid {
     display: grid;
